# FlexRAG

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CITATION.cff  MANIFEST.in  README-zh.md  README.md  kylin_searcher.py  prepare_index.ipynb  prepare_index.py  pyproject.toml  pytest.ini  readme.md  requirements.txt  run_interactive.py  run_searcher.py  run_testset.py  setup.py  test.py  tested_models.md  utils.py
.github/workflows/: publish.yaml
benchmarks/: README.md  singlehop_qa.md
docs/: requirements.docs.txt
docs/source/: conf.py  index.rst
docs/source/getting_started/: installation.md  (+3 more)
examples/level_rag/: dense_searcher.py  high_level_searcher.py  hybrid_searcher.py  keyword_searcher.py  searcher.py  web_searcher.py
examples/moduler_rag/: moduler_rag.py
examples/react/: react_assistant.py
kylin/: __init__.py  assistant.py  kylin_prompts.py  kylin_searcher.py  load_vllm.py  utils.py
kylin/assistant/: __init__.py  assistant.py  basic_assistant.py  modular_rag_assistant.py
kylin/cache/: backends.py  persistent_cache.py
kylin/context_refine/: packer.py  refiner.py  summarizer.py
kylin/metrics/: __init__.py  evaluator.py  generation_metrics.py  lib_rel.cpp  loader.py  matching_metrics.py  metrics_base.py  retrieval_metrics.py
kylin/models/: __init__.py  anthropic_model.py  cohere_model.py  hf_model.py  jina_model.py  llamacpp_model.py  load.py  model_base.py  model_loader.py  ollama_model.py  openai_model.py  sentence_transformers_model.py  utils.py  vllm_model.py
kylin/prompt/: __init__.py  prompt_base.py  searcher_prompts.py  template.py
kylin/ranker/: __init__.py  cohere_ranker.py  gpt_ranker.py  hf_ranker.py  jina_ranker.py  mixedbread_ranker.py  ranker.py  ranker_loader.py  voyage_ranker.py
kylin/retriever/: __init__.py  bm25_retriever.py  bm25s_retriever.py  cache.py  dense_retriever.py  elastic_retriever.py  fingerprint.py  loader.py  milvus_retriever.py  retriever_base.py  retriever_loader.py  typesense_retriever.py  web_retriever.py
kylin/searchers/: __init__.py  bm25_searcher.py  dense_searcher.py  high_level_searcher.py  hybrid_searcher.py  keyword_searcher.py  lucene_searcher.py  naive_searcher.py  searcher.py  searcher_loader.py  web_searcher.py
kylin/text_process/: __init__.py  basic_filters.py  basic_processors.py  normalize_answers.py  pipeline.py  processor.py  utils.py
retriever/: __init__.py  bm25_retriever.py  cache.py  dense_retriever.py  loader.py  retriever.py  retriever_base.py  web_retriever.py
retriever/index/: __init__.py  faiss_index.py  scann_index.py
scripts/: clear_cache.py  combine_outputs.py  run_assistant.py  run_interactive.py
scripts/data_creation/: rewrite_generation.py
scripts/prepare_index/: prepare_bm25_index.py  prepare_dense_index.py  prepare_elastic_search.py  prepare_index.py  rebuild_index.py  utils.py
src/flexrag/: common_dataclass.py  utils.py
src/librarian/: utils.py
src/scripts/: combine_outputs.py  run_assistant.py  run_interactive.py
test/: test_assistant.py  test_cache.py  test_model.py  test_ranker.py  test_retriver.py
tests/: conftest.py  test_assistant.py  test_cache.py  test_chunker.py  test_data.py  test_database.py  test_model.py  test_ranker.py  test_retriver.py
tests/configs/: assistant.yaml  encoder.yaml  generator.yaml  ranker.yaml  retriever.yaml
(+206 files in other folders)
