[build-system]
requires = ["setuptools>=61", "wheel", "pybind11>=2.13"]
build-backend = "setuptools.build_meta"

[tool.rstcheck]
ignore_directives = ["autoclass", "automodule", "autofunction", "autosummary"]

[tool.doc8]
max_line_length = 88

[tool.pytest.ini_options]
markers = ["gpu: mark test as requiring GPU"]
log_level = "DEBUG"
asyncio_default_fixture_loop_scope = "function"
